feat: Add translation keys for form labels and options in multiple languages

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,7 +5,6 @@
   "ogTitle": "DronyImagem - Drone Solutions",
   "ogDescription": "Images | Event Videos | Drone Light Shows",
   "ogSiteName": "DronyImagem",
-
   "navSolutions": "Solutions",
   "navPortfolio": "Portfolio",
   "navAbout": "About",
@@ -13,11 +12,9 @@
   "navMission": "Mission",
   "navLumasky": "Lumasky",
   "navContact": "Contact Us",
-
   "heroTitle": "FLY HIGH,<br />CREATE VISION.",
   "heroSubtitle": "DronyImagem specializes in drone filming, aerial live streaming, and drone light shows, creating unique experiences that captivate audiences and enhance your brand.",
   "heroButton": "Discover Our Solutions",
-
   "servicesTitle": "Solutions",
   "servicesSubtitle": "From sky to audience: filming, streaming, and spectacles.",
   "serviceRealEstateTitle": "📸 Aerial Real Estate Images",
@@ -26,19 +23,18 @@
   "service2Desc": "Surprise your audience with a live drone broadcast, showcasing your event in real-time with stable, high-quality images. Perfect for festivals, trade shows, sports, and corporate events that need visual impact and comprehensive coverage.",
   "serviceLumaskyTitle": "✨ Lumasky Representative in Brazil",
   "service3Desc": "Delight the audience with a drone show synchronized with lights and music. Perfect for event openings, brand activations, inaugurations, and special celebrations. Each show is planned with a unique script, animations, and choreographies, making the sky the main stage of your event.",
-
+  "lumaskyAriaLabel": "Learn more about Lumasky shows",
   "portfolioTitle": "Portfolio",
   "portfolioSubtitle": "From aerial filming to drone light spectacles, DronyImagem has transformed corporate events, festivals, and audiovisual productions into unique visual experiences. Check out our projects and see how our aerial footage and drone shows impact audiences in every detail.",
   "portfolioBtnPhotos": "📸 Photo Gallery",
   "portfolioBtnVideos": "🎬 Video Gallery",
-
   "aboutTitle": "About",
   "aboutSubtitle": "Technology, creativity, and innovation in the air",
   "aboutIntro": "Founded by two brothers from Mato Grosso, fascinated by technology and passionate about constant evolution.",
   "aboutP1": "At DronyImagem, we combine professional aerial filming, live image transmission, and synchronized drone light shows to transform events into memorable experiences.",
   "aboutP2": "Our team consists of professionals specialized in audiovisuals and drone piloting, ready to capture every moment with cinematic quality, safety, and technical precision.",
   "aboutP3": "We believe every flight is an opportunity to tell a new story — from above, with emotion and impact. With DronyImagem, your event gains a new perspective and the visibility it deserves.",
-
+  "aboutImageAlt": "DronyImagem team in the field",
   "valuesTitle": "Values",
   "valuesSubtitle": "Below are the key points that guide our brand value:",
   "value1Title": "Memorable Experiences",
@@ -47,27 +43,34 @@
   "value2Desc": "We use cutting-edge aerial technology—from light shows to live streams—to give your event a new perspective and the visual impact it deserves.",
   "value3Title": "Quality and Safety",
   "value3Desc": "We guarantee technical precision and cinematic quality in every flight. Our specialized team captures unique angles with total safety, valuing your brand.",
-
   "missionTitle": "Mission",
   "missionSubtitle": "To be a creative vision from above, elevating the perception and impact of your projects.",
   "missionDesc": "Our mission is to transform your event into a memorable visual spectacle. We use cutting-edge aerial technology, from cinematic filming to light shows to tell your story from above, with safety, creativity, and impact.",
-
   "contactTitle": "CONTACT US",
   "contactSubtitle": "Let's talk about your next aerial project!",
   "formName": "Name:",
   "formEmail": "Email:",
   "formPhone": "Phone:",
   "formMessage": "Describe a bit about your event or project:",
+  "formCityLabel": "What is your city?",
+  "formCityPlaceholder": "Ex: Cuiaba - MT",
+  "formPurposeLabel": "What is the purpose?",
+  "formPurposeDefaultOption": "Choose an option...",
+  "formPurposeOpt1": "Real Estate (Photos/Videos)",
+  "formPurposeOpt2": "Construction Monitoring",
+  "formPurposeOpt3": "Drone Light Show (Lumasky)",
+  "formPurposeOpt4": "Sports Event",
+  "formPurposeOpt5": "Other (Describe on WhatsApp)",
+  "formDateLabel": "When do you need it? (Optional)",
+  "formEditionLabel": "I also need image/video editing",
   "formSubmit": "Send Message",
   "contactAltText": "Or contact us directly:",
-
   "footerNav": "Navigation",
   "footerLegal": "Legal",
   "footerTerms": "Terms of Service",
   "footerPrivacy": "Privacy Policy",
   "footerRights": "All rights reserved.",
   "footerDev": "Developed with passion for aerial technology.",
-
   "lumaskyPageLink": "lumasky.html",
   "galleryPhotosPageLink": "galeria-fotos.html",
   "galleryVideosPageLink": "galeria-videos.html"
