--- a/locales/es.json
+++ b/locales/es.json
@@ -5,7 +5,6 @@
   "ogTitle": "DronyImagem - Soluciones con Drones",
   "ogDescription": "Imágenes | Videos de Eventos | Shows de Drones con Luces",
   "ogSiteName": "DronyImagem",
-
   "navSolutions": "Soluciones",
   "navPortfolio": "Portafolio",
   "navAbout": "Acerca de",
@@ -13,11 +12,9 @@
   "navMission": "Misión",
   "navLumasky": "Lumasky",
   "navContact": "Contáctenos",
-
   "heroTitle": "VUELA ALTO,<br />CREA VISIÓN.",
   "heroSubtitle": "DronyImagem se especializa en filmación com drones, transmisión aérea en vivo y shows de drones com luces, creando experiencias únicas que cautivan al público y realzan su marca.",
   "heroButton": "Descubre Nuestras Soluciones",
-
   "servicesTitle": "Soluciones",
   "servicesSubtitle": "Del cielo a tu público: filmación, transmisión y espectáculos.",
   "serviceRealEstateTitle": "📸 Imágenes Aéreas de Inmuebles",
@@ -26,48 +23,54 @@
   "service2Desc": "Sorprende a tu público com una transmisión en vivo realizada com drones, mostrando tu evento en tiempo real com imágenes estables y de alta calidad. Perfecto para festivales, ferias, eventos deportivos y corporativos que necesitan impacto visual y cobertura completa.",
   "serviceLumaskyTitle": "✨ Representante de Lumasky en Brasil",
   "service3Desc": "Deleita a la audiencia com un show de drones sincronizados com luces y música. Perfecto para aperturas de eventos, activaciones de marca, inauguraciones y celebraciones especiales. Cada show se planifica com un guion, animaciones y coreografías exclusivas, haciendo del cielo el escenario principal de tu evento.",
-
+  "lumaskyAriaLabel": "Más información sobre shows con Lumasky",
   "portfolioTitle": "Portafolio",
   "portfolioSubtitle": "Desde filmaciones aéreas hasta espectáculos de luces com drones, DronyImagem ha transformado eventos corporativos, festivales y producciones audiovisuales en experiencias visuales únicas. Descubre nuestros proyectos y comprueba cómo nuestras filmaciones aéreas y shows de drones impactan al público en cada detalle.",
   "portfolioBtnPhotos": "📸 Galeria de Fotos",
   "portfolioBtnVideos": "🎬 Galeria de Vídeos",
-
   "aboutTitle": "Acerca de",
   "aboutSubtitle": "Tecnología, creatividad e innovación en el aire",
   "aboutIntro": "Fundada por dos hermanos de Mato Grosso, fascinados por la tecnología y apasionados por la evolución constante.",
   "aboutP1": "En DronyImagem, unimos filmación aérea profesional, transmisión de imágenes en vivo y shows de drones com luces sincronizadas para transformar eventos en experiencias memorables.",
   "aboutP2": "Nuestro equipo está formado por profesionales especializados en audiovisuales y pilotaje de drones, listos para registrar cada momento com calidad cinematográfica, seguridad y precisión técnica.",
   "aboutP3": "Creemos que cada vuelo es una oportunidad para contar una nueva historia — desde arriba, com emoción e impacto. Com DronyImagem, tu evento obtiene una nueva perspectiva y la visibilidad que se merece.",
-
+  "aboutImageAlt": "Equipo DronyImagem en campo",
   "valuesTitle": "Valores",
   "valuesSubtitle": "A continuación se presentan los puntos clave que guían nuestro valor de marca:",
   "value1Title": "Experiencias Memorables",
   "value1Desc": "Combinamos tecnología y creatividad para contar historias desde arriba. Transformamos tu evento en un espectáculo visual único que encanta y genera emoción.",
   "value2Title": "Innovación y Tecnología",
   "value2Desc": "Utilizamos tecnología aérea de vanguardia, desde shows de luces hasta transmisiones en vivo, para darle a tu evento una nueva perspectiva y el impacto visual que se merece.",
-  "value3Title": "Calidad y Seguridad",
+  "value3Title": "Qualidad y Seguridad",
   "value3Desc": "Garantizamos precisión técnica y calidad cinematográfica en cada vuelo. Nuestro equipo especializado captura ángulos únicos com total seguridad, valorando tu marca.",
-
   "missionTitle": "Misión",
   "missionSubtitle": "Ser una visión creativa desde arriba, elevando la percepción y el impacto de tus proyectos.",
   "missionDesc": "Nuestra misión es transformar tu evento en un espectáculo visual memorable. Utilizamos tecnología aérea de vanguardia, desde filmaciones cinematográficas hasta shows de luces, para contar tu historia desde arriba, com seguridad, creatividad e impacto.",
-
   "contactTitle": "CONTÁCTENOS",
   "contactSubtitle": "¡Hablemos de tu próximo proyecto aéreo!",
   "formName": "Nombre:",
   "formEmail": "Correo electrónico:",
   "formPhone": "Teléfono:",
   "formMessage": "Describe un poco tu evento o proyecto:",
+  "formCityLabel": "¿Cuál es tu ciudad?",
+  "formCityPlaceholder": "Ej: Cuiabá - MT",
+  "formPurposeLabel": "¿Cuál es el propósito?",
+  "formPurposeDefaultOption": "Elige una opción...",
+  "formPurposeOpt1": "Inmobiliario (Fotos/Videos)",
+  "formPurposeOpt2": "Seguimiento de Obras",
+  "formPurposeOpt3": "Show de Drones con Luces (Lumasky)",
+  "formPurposeOpt4": "Evento Deportivo",
+  "formPurposeOpt5": "Otro (Describe en WhatsApp)",
+  "formDateLabel": "¿Para cuándo lo necesitas? (Opcional)",
+  "formEditionLabel": "También necesito edición de imágenes/videos",
   "formSubmit": "Enviar Mensaje",
   "contactAltText": "O contáctanos directamente:",
-
   "footerNav": "Navegación",
   "footerLegal": "Legal",
   "footerTerms": "Términos de Servicio",
   "footerPrivacy": "Política de Privacidad",
   "footerRights": "Todos os derechos reservados.",
   "footerDev": "Desarrollado com pasión por la tecnología aérea.",
-
   "lumaskyPageLink": "lumasky.html",
   "galleryPhotosPageLink": "galeria-fotos.html",
   "galleryVideosPageLink": "galeria-videos.html"
