feat: Add translation keys and update titles for photo and video galleries, and Lumasky page

--- a/locales/en.json
+++ b/locales/en.json
@@ -65,6 +65,26 @@
   "formEditionLabel": "I also need image/video editing",
   "formSubmit": "Send Message",
   "contactAltText": "Or contact us directly:",
+  "backToPortfolio": "← Back to Portfolio",
+  "backToSolutions": "← Back to Solutions",
+  "photoGalleryTitle": "Photo Gallery",
+  "photoGallerySubtitle": "Incredible projects and moments captured by our lenses.",
+  "galleryPlaceholder": "Our photo gallery is being updated. Come back soon!",
+  "videoGalleryTitle": "Video Gallery",
+  "videoGallerySubtitle": "Our best aerial productions in motion.",
+  "videoTopicCommercial": "Commercial Establishments",
+  "videoTopicRealEstate": "Real Estate",
+  "lumaskyPageTitle": "The Future of Entertainment: Drone Light Shows",
+  "lumaskyPageSubtitle": "A symphony of technology and art that transforms the night sky.",
+  "lumaskyP1": "As Lumasky representatives in Brazil, DronyImagem brings one of the most innovative and spectacular forms of visual entertainment available today to your event: choreographed drone shows.",
+  "lumaskyH2_1": "What is a Drone Show?",
+  "lumaskyP2": "Imagine hundreds, or even thousands, of drones equipped with powerful LED lights ascending to the skies in perfect synchrony. They move like a technological ballet, forming logos, 3D images, text, and dynamic animations in the air.",
+  "lumaskyP3": "Unlike traditional fireworks, drone shows are quieter, reusable, environmentally friendly, and offer a level of customization and artistic precision impossible to achieve otherwise. It's the ultimate tool to tell a story and create a \"wow\" moment your audience will never forget.",
+  "lumaskyH2_2": "How Does It Work?",
+  "lumaskyP4": "Each show is meticulously planned in 3D software, where choreographers and designers create the complete visual sequence, synchronizing each drone movement with a soundtrack. On the day of the event, a central control station commands the entire drone \"swarm,\" ensuring each one executes its trajectory with millimeter precision, in a completely safe manner.",
+  "lumaskyH2_3": "Ideal for Any Major Event",
+  "lumaskyP5": "Whether for a product launch, a festival opening, a corporate celebration, a grand wedding, or a brand activation, drone shows are the perfect choice for those seeking innovation and unparalleled visual impact. The sky is, quite literally, the main stage.",
+  "lumaskyCtaBtn": "Visit the official Lumasky website",
   "footerNav": "Navigation",
   "footerLegal": "Legal",
   "footerTerms": "Terms of Service",
