--- a/locales/es.json
+++ b/locales/es.json
@@ -65,6 +65,26 @@
   "formEditionLabel": "También necesito edición de imágenes/videos",
   "formSubmit": "Enviar Mensaje",
   "contactAltText": "O contáctanos directamente:",
+  "backToPortfolio": "← Volver al Portafolio",
+  "backToSolutions": "← Volver a Soluciones",
+  "photoGalleryTitle": "Galería de Fotos",
+  "photoGallerySubtitle": "Proyectos y momentos increíbles capturados por nuestros lentes.",
+  "galleryPlaceholder": "Nuestra galería de fotos está siendo actualizada. ¡Vuelve pronto!",
+  "videoGalleryTitle": "Galería de Videos",
+  "videoGallerySubtitle": "Nuestras mejores producciones aéreas en movimiento.",
+  "videoTopicCommercial": "Establecimientos Comerciales",
+  "videoTopicRealEstate": "Inmobiliarias",
+  "lumaskyPageTitle": "El Futuro del Entretenimiento: Shows de Drones con Luces",
+  "lumaskyPageSubtitle": "Una sinfonía de tecnología y arte que transforma el cielo nocturno.",
+  "lumaskyP1": "Como representantes de Lumasky en Brasil, DronyImagem trae a su evento una de las formas más innovadoras y espectaculares de entretenimiento visual disponibles hoy: los shows de drones coreografiados.",
+  "lumaskyH2_1": "¿Qué es un Show de Drones?",
+  "lumaskyP2": "Imagine cientos, o incluso miles, de drones equipados con potentes luces LED ascendiendo al cielo en perfecta sincronía. Se mueven como un ballet tecnológico, formando logotipos, imágenes 3D, textos y animaciones dinámicas en el aire.",
+  "lumaskyP3": "A diferencia de los fuegos artificiales tradicionales, los shows de drones son más silenciosos, reutilizables, ecológicos y ofrecen un nivel de personalización y precisión artística imposible de lograr de otra manera. Es la herramienta definitiva para contar una historia y crear un momento \"guau\" que su público nunca olvidará.",
+  "lumaskyH2_2": "¿Cómo Funciona?",
+  "lumaskyP4": "Cada show se planifica meticulosamente en software 3D, donde coreógrafos y diseñadores crean la secuencia visual completa, sincronizando cada movimiento de dron con una banda sonora. El día del evento, una estación de control central comanda todo el \"enjambre\" de drones, asegurando que cada uno ejecute su trayectoria con precisión centimétrica, de forma totalmente segura.",
+  "lumaskyH2_3": "Ideal para Cualquier Evento Importante",
+  "lumaskyP5": "Ya sea para el lanzamiento de un producto, la apertura de un festival, una celebración corporativa, una boda grandiosa o una activación de marca, los shows de drones son la elección perfecta para quienes buscan innovación y un impacto visual inigualable. El cielo es, literalmente, el escenario principal.",
+  "lumaskyCtaBtn": "Visita el sitio web oficial de Lumasky",
   "footerNav": "Navegación",
   "footerLegal": "Legal",
   "footerTerms": "Términos de Servicio",
