--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -65,6 +65,26 @@
   "formEditionLabel": "Preciso também da edição das imagens/vídeos",
   "formSubmit": "Enviar Mensagem",
   "contactAltText": "Ou fale conosco diretamente:",
+  "backToPortfolio": "← Voltar ao Portfólio",
+  "backToSolutions": "← Voltar para Soluções",
+  "photoGalleryTitle": "Galeria de Fotos",
+  "photoGallerySubtitle": "Projetos e momentos incríveis capturados por nossas lentes.",
+  "galleryPlaceholder": "Nossa galeria de fotos está sendo atualizada. Volte em breve!",
+  "videoGalleryTitle": "Galeria de Vídeos",
+  "videoGallerySubtitle": "Nossas melhores produções aéreas em movimento.",
+  "videoTopicCommercial": "Estabelecimentos Comerciais",
+  "videoTopicRealEstate": "Imobiliárias",
+  "lumaskyPageTitle": "O Futuro do Entretenimento: Shows de Drones com Luzes",
+  "lumaskyPageSubtitle": "Uma sinfonia de tecnologia e arte que transforma o céu noturno.",
+  "lumaskyP1": "Como representantes da Lumasky no Brasil, a DronyImagem traz para o seu evento uma das formas mais inovadoras e espetaculares de entretenimento visual disponíveis hoje: os shows de drones coreografados.",
+  "lumaskyH2_1": "O que é um Show de Drones?",
+  "lumaskyP2": "Imagine centenas, ou até milhares, de drones equipados com potentes luzes LED subindo aos céus em perfeita sincronia. Eles se movem como um balé tecnológico, formando logotipos, imagens 3D, textos e animações dinâmicas no ar.",
+  "lumaskyP3": "Diferente dos tradicionais fogos de artifício, os shows de drones são mais silenciosos, reutilizáveis, ecologicamente corretos e oferecem um nível de personalização e precisão artística impossível de alcançar de outra forma. É a ferramenta definitiva para contar uma história e criar um momento \"uau\" que seu público jamais esquecerá.",
+  "lumaskyH2_2": "Como Funciona?",
+  "lumaskyP4": "Cada show é meticulosamente planejado em software 3D, onde coreógrafos e designers criam a sequência visual completa, sincronizando cada movimento de drone com uma trilha sonora. No dia do evento, uma estação de controle central comanda toda a \"enxame\" de drones, garantindo que cada um execute sua trajetória com precisão centimétrica, de forma totalmente segura.",
+  "lumaskyH2_3": "Ideal para Qualquer Grande Evento",
+  "lumaskyP5": "Seja para o lançamento de um produto, a abertura de um festival, uma celebração corporativa, um casamento grandioso ou uma ativação de marca, os shows de drones são a escolha perfeita para quem busca inovação e um impacto visual inigualável. O céu é, literalmente, o palco principal.",
+  "lumaskyCtaBtn": "Visite o site oficial da Lumasky",
   "footerNav": "Navegação",
   "footerLegal": "Legal",
   "footerTerms": "Termos de Serviço",
