--- a/locales/es.json
+++ b/locales/es.json
@@ -74,6 +74,7 @@
   "videoGallerySubtitle": "Nuestras mejores producciones aéreas en movimiento.",
   "videoTopicCommercial": "Establecimientos Comerciales",
   "videoTopicRealEstate": "Inmobiliarias",
+  "videoTopicPostalCards": "Tarjetas Postales",
   "lumaskyPageTitle": "El Futuro del Entretenimiento: Shows de Drones con Luces",
   "lumaskyPageSubtitle": "Una sinfonía de tecnología y arte que transforma el cielo nocturno.",
   "lumaskyP1": "Como representantes de Lumasky en Brasil, DronyImagem trae a su evento una de las formas más innovadoras y espectaculares de entretenimiento visual disponibles hoy: los shows de drones coreografiados.",
@@ -83,7 +84,7 @@
   "lumaskyH2_2": "¿Cómo Funciona?",
   "lumaskyP4": "Cada show se planifica meticulosamente en software 3D, donde coreógrafos y diseñadores crean la secuencia visual completa, sincronizando cada movimiento de dron con una banda sonora. El día del evento, una estación de control central comanda todo el \"enjambre\" de drones, asegurando que cada uno ejecute su trayectoria con precisión centimétrica, de forma totalmente segura.",
   "lumaskyH2_3": "Ideal para Cualquier Evento Importante",
-  "lumaskyP5": "Ya sea para el lanzamiento de un producto, la apertura de un festival, una celebración corporativa, una boda grandiosa o una activación de marca, los shows de drones son la elección perfecta para quienes buscan innovación y un impacto visual inigualable. El cielo es, literalmente, el escenario principal.",
+  "lumaskyP5": "Ya sea para el lanzamiento de un producto, la apertura de un festival, una celebración corporativa, un casamiento grandioso o una activación de marca, los shows de drones son la elección perfecta para quienes buscan innovación y un impacto visual inigualable. El cielo es, literalmente, el escenario principal.",
   "lumaskyCtaBtn": "Visita el sitio web oficial de Lumasky",
   "footerNav": "Navegación",
   "footerLegal": "Legal",
