--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -74,6 +74,7 @@
   "videoGallerySubtitle": "Nossas melhores produções aéreas em movimento.",
   "videoTopicCommercial": "Estabelecimentos Comerciais",
   "videoTopicRealEstate": "Imobiliárias",
+  "videoTopicPostalCards": "Cartões Postais",
   "lumaskyPageTitle": "O Futuro do Entretenimento: Shows de Drones com Luzes",
   "lumaskyPageSubtitle": "Uma sinfonia de tecnologia e arte que transforma o céu noturno.",
   "lumaskyP1": "Como representantes da Lumasky no Brasil, a DronyImagem traz para o seu evento uma das formas mais inovadoras e espetaculares de entretenimento visual disponíveis hoje: os shows de drones coreografados.",
@@ -83,7 +84,7 @@
   "lumaskyH2_2": "Como Funciona?",
   "lumaskyP4": "Cada show é meticulosamente planejado em software 3D, onde coreógrafos e designers criam a sequência visual completa, sincronizando cada movimento de drone com uma trilha sonora. No dia do evento, uma estação de controle central comanda toda a \"enxame\" de drones, garantindo que cada um execute sua trajetória com precisão centimétrica, de forma totalmente segura.",
   "lumaskyH2_3": "Ideal para Qualquer Grande Evento",
-  "lumaskyP5": "Seja para o lançamento de um produto, a abertura de um festival, uma celebração corporativa, um casamento grandioso ou uma ativação de marca, os shows de drones são a escolha perfeita para quem busca inovação e um impacto visual inigualável. O céu é, literalmente, o palco principal.",
+  "lumaskyP5": "Seja para o lançamento de um produto, a abertura de um festival, uma celebração corporativa, um casamento grandioso ou uma ativação de marca, os shows de drones são a escolha perfeita para quem busca inovações e um impacto visual inigualável. O céu é, literalmente, o palco principal.",
   "lumaskyCtaBtn": "Visite o site oficial da Lumasky",
   "footerNav": "Navegação",
   "footerLegal": "Legal",
